# test3rdParty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  algorithmDemo.cpp  imageAlgorithm.cpp  videoAlgorithm.cpp
algorithm/: CMakeLists.txt
base/: amcomdef.h  asvloffscreen.h  degaFormat.h  degaPredefine.h  degaType.h
input/include/: cv.h
shade/: box.frag  box.vert
utils/: CMakeLists.txt  cDegaCamera.h  cDegaException.h  cDegaShade.h  cDegaTime.h  cDegaUtils.h  cGUIUtils.h  cInterfaceUtils.cpp  cInterfaceUtils.h  utils.cpp
utils/degaUtils/: CMakeLists.txt  cDegaImage.cpp  cDegaImage.h  cDegaMat.cpp  cDegaMat.h  cDegaUtils.cpp  cDegaUtils.h
utils/demoUtils/: CMakeLists.txt  cDegaCamera.h  cDemoUtils.h  cGUIUtils.h  cInterfaceUtils.cpp  cInterfaceUtils.h
